--- a/views/solicitante.ejs
+++ b/views/solicitante.ejs
@@ -12,7 +12,7 @@
     
     <ul>
         <% respuesta.forEach(r => { %>
-            <li> <%= r.nombre_apellido  %> <%= r.id  %>  <%= r.username%> <%= r.numero_telefonico%></li>
+            <li> <%= r.nombre_apellido  %> <%= r.id  %>  <%= r.username%> <%= r.telefono%></li>
         <% }) %>
     </ul>
   </body>
