--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,46 @@
     <title>Info</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  <img src="https://i.ibb.co/6Nc4Y19/Screenshot-2.png"></img>
+ 
+
   <body>
-<h1>Información de Integrantes</h1>
-<h2>Yetzenia Mendoza</h2>
-<h2>Alfonso Castellano</h2>
-<h2>Adolfo Ochoa</h2>
-<h2>Fernando Colmenares </h2>
+
+    <ul>
+
+      <li><img src="/images/uvm.png" width="60" height="60"></img></li>
+      <li><a href='/equipo'><i><b>Equipos</b></i></a></li>
+      <li><a href='/espacio'><i><b>Espacios</b></i></a></li>
+      <li><a href='/personal'><i><b>Personal Tecnico</b></i></a></li>
+      <li><a href='/reserva'><i><b>Reserva</b></i></a></li>
+      <li><a href='/solicitante'><i><b>Solicitantes</b></i></a></li>
+      <li><a href='/trabajo'><i><b>Trabajos</b></i></a></li>
+      
+    </ul>
+
+  
+    <div class="form">
+      
+      <form>
+          <h1 class="h1">Universidad Valle Momboy</h1>
+          <h2 class ="h2"><b>Entorno y Sesiones</b></h2>
+          <img class = "h2Portada" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOdXN8buC3CJbe2GupIOPk_bRzV1luHR42QA&usqp=CAU" alt="Entorno y Sesiones">
+          <h3 class="h3">Integrantes:</h3>
+          <h2 class ="miembros">Alfonso Castellano</h2>
+          <h2 class ="miembros">Adolfo Ochoa</h2>
+          <h2 class ="miembros">Fernando Colmenares </h2>
+          <h2 class ="miembros">Yetzenia Mendoza </h2>
+          <h3 style="text-align: right;">
+            <i> 
+            <b>
+            Materia: Backend
+            Tutor: Roberto Di Michele
+            </b>
+            </i>
+          </h3>
+          <h2><i><b>Valera 2023</b></i></h2>
+      </form>
+    
+    </div>
 
 
   </body>
