--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,120 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: rgb(17, 95, 17);
+  flex-direction: column;
+  justify-content: center;
+  font-family: "Times New Roman", Times, serif;
 }
 
 a {
   color: #00B7FF;
 }
+
+.imagen{
+  width: 15%;
+  margin: 0 auto;
+  display: flex;
+  float: right;
+ }
+
+
+ div.form
+ {
+      margin-top: 10px;
+      margin-left: 125px;
+      margin-right: 125px;
+      margin-bottom: auto;
+     display:block;
+     text-align: center;
+     top: 50px;
+
+ }
+ .form {
+  display: inline-block ; 
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  border: solid;  
+  background-color: lightgreen
+}
+
+.form form {
+  margin-top: 8px;
+  border: solid;  
+  background-color: lightgreen;
+}
+
+.h1 {
+  margin-bottom: 120px ;
+  color: white ;
+  background-color: darkgreen;
+}
+
+.h2 {
+  text-align:center;
+  margin-bottom: 10px;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.h2Portada{
+  margin-bottom: auto;
+}
+
+.h3{
+  margin-top: 1em;
+  text-align: right;
+}
+
+.miembros{
+  text-align: right;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
+}
+
+
+  .table_equipo {
+    border-collapse: collapse;
+  background-color: aliceblue;
+  margin-left: auto;
+  margin-right: auto;
+  }
+  .table_equipo, th, td {
+    border: 1px solid  black;
+  }
+
+
+/*  form
+  {
+      display: inline-block;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: left;
+      border: solid;  
+    background-color: lightgreen;
+  }
+ 
