--- a/views/equipo.ejs
+++ b/views/equipo.ejs
@@ -6,16 +6,43 @@
     <link rel="icon" href="https://i.ibb.co/kXMPtKN/Screenshot-1.png" type="png" size=20px>
   </head>
   <body>
-    
-    <img src="https://i.ibb.co/6Nc4Y19/Screenshot-2.png"></img>
-<h1>Sistema de Reservas</h1>
-    
-
     <ul>
-        <% respuesta.forEach(r => { %>
-            <li> <%= r.ID %> <%= r.NOMBRE  %>  <%= r.SERIAL  %> <%= r.DESCRIPCION  %><%= r.FECHA  %><%= r.ESTADO  %> </li>
-         
-        <% }) %>
+      <li><img src="/images/uvm.png" width="60" height="60"></img></li>
+      <li><a href='/index'><i><b>Home</b></i></a></li>
+      <li><a href='/equipo'><i><b>Equipos</b></i></a></li>
+      <li><a href='/espacio'><i><b>Espacios</b></i></a></li>
+      <li><a href='/personal'><i><b>Personal Tecnico</b></i></a></li>
+      <li><a href='/reserva'><i><b>Reserva</b></i></a></li>
+      <li><a href='/solicitante'><i><b>Solicitantes</b></i></a></li>
+      <li><a href='/trabajo'><i><b>Trabajos</b></i></a></li>
     </ul>
+    <div style = "text-align: center;">
+      <img src="https://i.ibb.co/vq53NVk/uvm.png" width="200" height="200"></img>
+    </div>
+
+
+  <h1 class="h1"style="text-align:center"> Sistema de Reservas</h1>
+
+
+<table class="table_equipo">
+  <tr>
+    <th>ID</th>
+    <th>Nombre</th>
+    <th>Serial</th>
+    <th>Descripción</th>
+    <th>Fecha</th>
+    <th>Estado</th>
+  </tr>
+  <% resp.forEach(r => { %>
+    <tr>
+      <td><%= r.ID %></td>
+      <td><%= r.NOMBRE %></td>
+      <td><%= r.SERIAL %></td>
+      <td><%= r.DESCRIPCION %></td>
+      <td><%= r.FECHA %></td>
+      <td><%= r.ESTADO %></td>
+    </tr>
+  <% }) %>
+</table>
   </body>
 </html>
