--- a/views/solicitante.ejs
+++ b/views/solicitante.ejs
@@ -6,14 +6,45 @@
     <link rel="icon" href="https://i.ibb.co/kXMPtKN/Screenshot-1.png" type="png" size=20px>
   </head>
   <body>
-    
-    <img src="https://i.ibb.co/6Nc4Y19/Screenshot-2.png"></img>
-    <h1>Sistema de Reservas</h1>
-    
     <ul>
-        <% respuesta.forEach(r => { %>
-            <li> <%= r.nombre_apellido  %> <%= r.id  %>  <%= r.username%> <%= r.telefono%></li>
-        <% }) %>
+      <li><img src="/images/uvm.png" width="60" height="60">
+
+      <li><a href='/index'><i><b>Home</b></i></a></li>
+      <li><a href='/equipo'><i><b>Equipos</b></i></a></li>
+      <li><a href='/espacio'><i><b>Espacios</b></i></a></li>
+      <li><a href='/personal'><i><b>Personal Tecnico</b></i></a></li>
+      <li><a href='/reserva'><i><b>Reserva</b></i></a></li>
+      <li><a href='/solicitante'><i><b>Solicitantes</b></i></a></li>
+      <li><a href='/trabajo'><i><b>Trabajos</b></i></a></li>
     </ul>
+
+    <div style = "text-align: center;">
+      <img src="https://i.ibb.co/vq53NVk/uvm.png" width="200" height="200"></img>
+    </div>
+
+    <h1 class="h1"style="text-align:center"> Sistema de Reservas</h1>
+    
+    <table class="table_equipo">
+      <tr>
+        <th>ID</th>
+        <th>Nombre y Apellido</th>
+        <th>Fecha Nacimiento</th>
+        <th>Dirección</th>
+        <th>Username</th>
+        <th>Clave</th>
+        <th>Número de Telefono</th>
+      </tr>
+      <% respuesta.forEach(r => { %>
+        <tr>
+          <td><%= r.id %></td>
+          <td><%= r.nombre_apellido %></td>
+          <td><%= r.fecha_nacimiento %></td>
+          <td><%= r.direccion %></td>
+          <td><%= r.username %></td>
+          <td><%= r.clave %></td>
+          <td><%= r.telefono %></td>
+        </tr>
+      <% }) %>
+    </table>
   </body>
 </html>
